--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="robots" content="noindex">
   <meta  name="viewport" content="width=device-width,initial-scale=1">
   <title>Title</title>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.3.1/jquery.fancybox.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/css/swiper.min.css">
@@ -12,37 +14,39 @@
 </head>
 <body>
   <header class="header">
-    <div class="wrapper header__wrap">
-      <div class="logo">
-        <img src="img/images/logo.png" alt="logo">
-      </div>
-      <nav class="menu">
-        <button type="button" class="menu__btn"></button>
-        <ul class="menu__list">
-          <li class="menu__item menu__item--active">
-            <a href="#" class="menu__link">Официальный сайт</a>
-          </li>
-          <li class="menu__item">
-            <a href="#" class="menu__link">Регистрация</a>
-          </li>
-          <li class="menu__item">
-            <a href="#" class="menu__link">Промокод</a>
-          </li>
-          <li class="menu__item">
-            <a href="#" class="menu__link">Бонус</a>
-          </li>
-          <li class="menu__item">
-            <a href="#" class="menu__link">Приложение</a>
-          </li>
-          <li class="menu__item">
-            <a href="#" class="menu__link">Казино</a>
-          </li>
-        </ul>
-      </nav>
-      <div class="header__user">
-        <a href="#" class="header__link">Спорт чат</a>
-        <a href="#" class="header__link">Получить IPhone</a>
-        <a href="#" class="header__btn">Зарегистрироваться</a>
+    <div class="wrapper">
+      <div class="header__wrap">
+        <div class="logo">
+          <img src="img/images/logo.png" alt="logo">
+        </div>
+        <nav class="menu">
+          <button type="button" class="menu__btn"></button>
+          <ul class="menu__list">
+            <li class="menu__item menu__item--active">
+              <a href="#" class="menu__link">Официальный сайт</a>
+            </li>
+            <li class="menu__item">
+              <a href="#" class="menu__link">Регистрация</a>
+            </li>
+            <li class="menu__item">
+              <a href="#" class="menu__link">Промокод</a>
+            </li>
+            <li class="menu__item">
+              <a href="#" class="menu__link">Бонус</a>
+            </li>
+            <li class="menu__item">
+              <a href="#" class="menu__link">Приложение</a>
+            </li>
+            <li class="menu__item">
+              <a href="#" class="menu__link">Казино</a>
+            </li>
+          </ul>
+        </nav>
+        <div class="header__user">
+          <a href="#" class="header__link">Спорт чат</a>
+          <a href="#" class="header__link">Получить IPhone</a>
+          <a href="#" class="header__btn">Зарегистрироваться</a>
+        </div>
       </div>
     </div>
   </header>
@@ -458,6 +462,7 @@
   </footer>
   
   <script src="js/jquery-3.2.1.min.js"></script>
+  <script src="js/script.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.3.1/jquery.fancybox.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/js/swiper.min.js"></script>
   
