--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <div class="promo__block">
           <div class="promo__info">
             <div class="promo__top"><strong>1win</strong>БУКМЕКЕРСКАЯ КОНТОРА</div>
-            <div class="promo__title">Регистрируйся<br>и получай бонус</div>
+            <p class="title-main promo__title">Регистрируйся<br>и получай бонус</p>
             <div class="promo__text">Приветствуем вас на официальном сайте 1win букмекерская контора. Букмекер 1вин один из крупнейших представителей букмекерских услуг на территории СНГ. Он отличается от других как надежностью и защитой его пользователей, так и предлагаемыми коэффициентами, которые являются лучшими на рынке.</div>
             <div class="promo__btns">
               <a href="#" class="btn promo__btn">регистрация</a>
