--- a/index.html
+++ b/index.html
@@ -74,11 +74,11 @@
     <div class="wrapper wrapper--columns">
       <div class="codes">
         <p class="title">Дополнительные <span>ПРОМОКОДЫ</span></p>
-        <p>Получите приветственный бонус используя наши эксклюзивные промокоды. Чтобы получить бонус до <span>50000 рублей</span> или эквивалентную сумму в любой другой валюте, в зависимости от ваших предпочтений, нужно использовать код при регистрации.</p>
+        <div class="codes__info">Получите приветственный бонус используя наши эксклюзивные промокоды. Чтобы получить бонус до <span>50000 рублей</span> или эквивалентную сумму в любой другой валюте, в зависимости от ваших предпочтений, нужно использовать код при регистрации.</div>
         <ul class="codes__list">
           <li class="codes__item">
             <figure class="codes__img">
-              <img src="img/images/banner-1.jpg" alt="bonus">
+              <img src="img/images/banner-1.png" alt="bonus">
             </figure>
             <div class="codes__text">
               <p class="codes__title">200% приветственный бонус на первый депозит</p>
@@ -94,7 +94,7 @@
           </li>
           <li class="codes__item">
             <figure class="codes__img">
-              <img src="img/images/banner-2.jpg" alt="bonus">
+              <img src="img/images/banner-2.png" alt="bonus">
             </figure>
             <div class="codes__text">
               <p class="codes__title">Бонус казино</p>
@@ -110,7 +110,7 @@
           </li>
           <li class="codes__item">
             <figure class="codes__img">
-              <img src="img/images/banner-3.jpg" alt="bonus">
+              <img src="img/images/banner-3.png" alt="bonus">
             </figure>
             <div class="codes__text">
               <p class="codes__title">Максимальный <img src="img/icons/fire.svg" alt="Максимальный"></p>
@@ -130,23 +130,23 @@
       <nav class="content">
         <p class="title">Оглавление</p>
         <ol class="content__list">
-          <li><a href="#">Вход на букмекерскую контору</a></li>
-          <li><a href="#">Дополнительные промо</a></li>
-          <li><a href="#">Полезная информация</a></li>
-          <li><a href="#">Почему выбирают данную букмекерскую контору?</a></li>
-          <li><a href="#">Подробная информация об официальном сайте букмекерской конторы</a></li>
-          <li><a href="#">Вход на официальный сайт 1вин</a></li>
-          <li><a href="#">Загрузка на телефон официальный сайт</a></li>
-          <li><a href="#">О нас говорят</a></li>
-          <li><a href="#">Комментарии</a></li>
+          <li><a href="#">1. Вход на букмекерскую контору</a></li>
+          <li><a href="#">2. Дополнительные промо</a></li>
+          <li><a href="#">3. Полезная информация</a></li>
+          <li><a href="#">4. Почему выбирают данную букмекерскую контору?</a></li>
+          <li><a href="#">5. Подробная информация об официальном сайте букмекерской конторы</a></li>
+          <li><a href="#">6. Вход на официальный сайт 1вин</a></li>
+          <li><a href="#">7. Загрузка на телефон официальный сайт</a></li>
+          <li><a href="#">8. О нас говорят</a></li>
+          <li><a href="#">9. Комментарии</a></li>
           <li>
-            <a href="#">Вопрос-ответ</a>
+            <a href="#">10. Вопрос-ответ</a>
             <ol class="content__sublist">
-              <li><a href="#">Как вывести деньги?</a></li>
-              <li><a href="#">Как делать ставки?</a></li>
-              <li><a href="#">Как продать купон?</a></li>
-              <li><a href="#">Как удалить учетную запись?</a></li>
-              <li><a href="#">Как посмотреть матч?</a></li>
+              <li><a href="#">10.1 Как вывести деньги?</a></li>
+              <li><a href="#">10.2 Как делать ставки?</a></li>
+              <li><a href="#">10.3 Как продать купон?</a></li>
+              <li><a href="#">10.4 Как удалить учетную запись?</a></li>
+              <li><a href="#">10.5 Как посмотреть матч?</a></li>
             </ol>
           </li>
         </ol>
