--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="robots" content="noindex">
   <meta  name="viewport" content="width=device-width,initial-scale=1">
-  <title>Title</title>
+  <title>1WIN</title>
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
@@ -270,7 +270,7 @@
         <div class="block">
           <p class="title">Загрузка на телефон официальный сайт</p>
           <div class="load__wrap">
-            <div class="load__text">
+            <div class="load__intro">
               <p>1вин всегда был в авангарде развития мобильных ставок. Букмекер вкладывает множество ресурсов в улучшение решений для мобильных телефонов, и в данный момент имеет удобное приложение 1win, отвечающее всем запросам пользователей. Кроме того, решение доступно как для телефонов Android, так и для iPhone / iPad.</p>
             </div>
             <ul class="load__list">
@@ -394,23 +394,23 @@
           <p class="title">Вопрос — ответ</p>
           <ul class="faq__list">
             <li class="faq__item">
-              <p class="title-2">Как вывести деньги?</p>
+              <p class="title-3">Как вывести деньги?</p>
               <p>Вывод средств осуществляется в личном кабинете. Вам нужно найти соответствующий раздел под названием «Снятие со счета» при входе и нажать на него. Платежные системы, доступные для вывода, будут предоставлены на выбор. Укажите наиболее удобный способ транзакции, введите сумму и подтвердите перевод средств.</p>
             </li>
             <li class="faq__item">
-              <p class="title-2">Как делать ставки?</p>
+              <p class="title-3">Как делать ставки?</p>
               <p>Вы должны зарегистрироваться и пополнить свой счет, прежде чем начнете игру. Вам также необходимо будет заполнить информацию в своей учетной записи, которая помечена как обязательная. После всех шагов можно переходить к беттингу. Если вы нажмете на коэффициент, появится купон ставки. Вы можете указать в нем тип и сумму, а затем подтвердить, нажав на кнопку в купоне.</p>
             </li>
             <li class="faq__item">
-              <p class="title-2">Как продать ставку?</p>
+              <p class="title-3">Как продать ставку?</p>
               <p>Для каждого откртого купона будет доступна функция продажи, если открыть историю. Просто нажмите кнопку «Продать» и выберите сумму, которую нужно вернуть. Он будет ограничен в зависимости от шансов на выигрыш купона.</p>
             </li>
             <li class="faq__item">
-              <p class="title-2">Как удалить учётную запись?</p>
+              <p class="title-3">Как удалить учётную запись?</p>
               <p>Вам нужно будет сделать запрос, написав в службу поддержки, чтобы удалить аккаунт. После этого клиенту необходимо будет снять все средства со счета. Аккаунт будет удален после одобрения запроса. Также его можно отменить в случае бездействия. Достаточно не делать ставок в течение года, чтобы получить письмо от администрации. Они узнают о желании клиента продолжать играть и, если они этого не сделают, заблокируют аккаунт.</p>
             </li>
             <li class="faq__item">
-              <p class="title-2">Как посмотреть матч?</p>
+              <p class="title-3">Как посмотреть матч?</p>
               <p>Вы увидите список событий, происходящих прямо сейчас, если откроете раздел Live. При наличии видеотрансляции в меню встречи будет специальная кнопка для просмотра. Нажав на нее, пользователь запускает трансляцию в небольшом окошке сбоку. Его можно открыть в полноэкранном режиме или в отдельной вкладке.</p>
             </li>
           </ul>
