--- a/index.html
+++ b/index.html
@@ -495,6 +495,11 @@
       preventClicksPropagation: false,
       slidesPerView: 3,
       spaceBetween: 20,
+      breakpoints: {
+        1022: {
+          slidesPerView: 2,
+        }
+      }
     });
   </script>
 </body>
