--- a/index.html
+++ b/index.html
@@ -482,25 +482,6 @@
   <script src="js/script.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.3.1/jquery.fancybox.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/js/swiper.min.js"></script>
-  
-  <!-- Slider -->
-  <script>
-    var mySwiper = new Swiper ('.comments__slider', {
-      navigation: {
-        nextEl: '.comments__next',
-        prevEl: '.comments__prev',
-      },
-      simulateTouch: false,
-      preventClicks: false,
-      preventClicksPropagation: false,
-      slidesPerView: 3,
-      spaceBetween: 20,
-      breakpoints: {
-        1022: {
-          slidesPerView: 2,
-        }
-      }
-    });
-  </script>
+  <script src="js/slider.js"></script>
 </body>
 </html>
