--- a/registration.html
+++ b/registration.html
@@ -79,9 +79,9 @@
               <div class="reg__text">
                 <p class="title-4">Процедура регистрации в БК возможна тремя вариантами:</p>
                 <ol>
-                  <li>1.При помощи вашего e-mail;</li>
-                  <li>2.При помощи одной из ваших страниц в какой-либо соцсети;</li>
-                  <li>3.В один клик.</li>
+                  <li><a href="#reg1">1.При помощи вашего e-mail;</a></li>
+                  <li><a href="#reg2">2.При помощи одной из ваших страниц в какой-либо соцсети;</a></li>
+                  <li><a href="#reg3">3.В один клик.</a></li>
                 </ol>
               </div>
               <div class="reg__quote">Сама процедура идентична регистрации в любой другой букмекерской конторе, вам необходимо будет выбрать государство из выпадающего списка, а также нужно выбрать валюту. Познакомимся со всеми тремя возможностями регистрации более подробно.</div>
@@ -90,7 +90,7 @@
           
           <div class="reg__main">
             <ul class="reg__list">
-              <li class="reg__item">
+              <li class="reg__item" id="reg1">
                 <div class="reg__info">
                   <span class="reg__number">1</span>
                   <p class="title-4">Регистрация через электронную почту</p>
@@ -107,7 +107,7 @@
                   </ul>
                 </div>
               </li>
-              <li class="reg__item">
+              <li class="reg__item" id="reg2">
                 <div class="reg__info">
                   <span class="reg__number">2</span>
                   <p class="title-4">Регистрация через аккаунт социальной сети</p>
@@ -124,7 +124,7 @@
                   </ul>
                 </div>
               </li>
-              <li class="reg__item">
+              <li class="reg__item" id="reg3">
                 <div class="reg__info">
                   <span class="reg__number">3</span>
                   <p class="title-4">Регистрация в один клик</p>
@@ -217,20 +217,6 @@
   <script src="js/script.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.3.1/jquery.fancybox.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/js/swiper.min.js"></script>
-  
-  <!-- Slider -->
-  <script>
-    var mySwiper = new Swiper ('.comments__slider', {
-      navigation: {
-        nextEl: '.comments__next',
-        prevEl: '.comments__prev',
-      },
-      simulateTouch: false,
-      preventClicks: false,
-      preventClicksPropagation: false,
-      slidesPerView: 3,
-      spaceBetween: 20,
-    });
-  </script>
+  <script src="js/reg-scroll.js"></script>
 </body>
 </html>
